Fix philosophy page second section box alignment

--- a/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
+++ b/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
@@ -901,8 +901,8 @@ div.cPhilosophyWidgetContainer.codeNativeBox {
         background-position: 16px center;
     }
     .cPhilosophy-widget p {
-        margin-bottom: 42px;
-        margin-top: 42px;
+        margin-bottom: 33px;
+        margin-top: 40px;
     }
 }
 
